--- a/docs.html
+++ b/docs.html
@@ -993,7 +993,7 @@
                     <div class="video-full-wrapper">
                         <div class="video-box">
                             <iframe
-                                src=""
+                                src="https://www.youtube.com/embed/SEM2H8YdtVo"
                                 title="Tutorial Video"
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                                 allowfullscreen>
