--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
           <img src="https://blogger.googleusercontent.com/img/a/AVvXsEhhvP6pgETkPNJe2AT6utIKqAKwYYVywCjnLIxC18X-YNMG7qtLFQWoYVuWuegreDfL_GIZyWG-t1ClUHUd_jF1afxWCGPFfRLJaEftDcRlD7o50093ZMambTtgGCjnWpth-nWNqDrIIHcvwC6vT22h1WNHA1W-uetp7pJMAQrzIS_CAC2C7SgYgdYNWR6P" alt="Feedio Logo" class="inline h-9 w-auto relative -top-2">
           untuk Windows & Linux
         </p>
-        <p class="mt-4 max-w-2xl text-xl text-blue-100 lg:mx-auto">Mulai berkarya hari ini</p>
+        <p class="mt-4 max-w-2xl text-xl text-blue-100 lg:mx-auto">Mengistall berarti menyetujui syarat dan ketentuan yang bisa berubah tanpa pemberitauan</p>
       </div>
       <div class="mt-10 lg:flex lg:space-x-6 lg:justify-center">
         <div class="bg-white rounded-lg shadow-xl overflow-hidden w-full max-w-2xl mb-6 lg:mb-0">
