--- a/docs.html
+++ b/docs.html
@@ -569,6 +569,27 @@
                     Koneksi ke Feedio Bot wajib menggunakan Token API khusus yang didapatkan melalui ekstensi browser. Ikuti langkah berikut:
                 </p>
                 <div class="warning-box">
+                    <strong>INFORMASI PENTING TERKAIT METODE API</strong>
+                    <p style="margin-top: 0.5rem;">
+                        Demi menjaga stabilitas sistem dan menyesuaikan dengan kebijakan keamanan terbaru dari Google, 
+                        metode <strong>generate langsung melalui API di dalam aplikasi Feedio</strong> saat ini 
+                        <strong>telah dinonaktifkan sepenuhnya</strong>.
+                    </p>
+                    <p>
+                        Hal ini disebabkan oleh penerapan sistem proteksi lanjutan Google, termasuk 
+                        <strong>reCAPTCHA, validasi sesi dinamis, dan proteksi aktivitas otomatis</strong>, 
+                        yang tidak memungkinkan proses generasi dijalankan secara langsung melalui API eksternal.
+                    </p>
+                    <p>
+                        Oleh karena itu, seluruh proses <strong>generate Video & Image</strong> untuk Flow Ultra 
+                        <strong>wajib dilakukan melalui Web Resmi Google Flow (Flow Ultra)</strong>. 
+                        Aplikasi Feedio berfungsi sebagai <em>automation helper</em> dan <em>download manager</em> 
+                        untuk hasil yang telah diproses melalui web tersebut.
+                    </p>
+                </div>
+
+                
+                <div class="warning-box">
                     <strong>PENTING:</strong> Token ini hanya berlaku untuk pengguna Paket Flow Ultra.
                 </div>
                 <ol>
