--- a/docs.html
+++ b/docs.html
@@ -593,7 +593,7 @@
                     <strong>PENTING:</strong> Token ini hanya berlaku untuk pengguna Paket Flow Ultra.
                 </div>
                 <ol>
-                    <li>Unduh <strong>Ekstensi Feedio APIs</strong> di sini: <a href="https://Feedio.pro/APIs" style="color: var(--accent-color);">Feedio.pro/APIs</a>.</li>
+                    <li>Unduh <strong>Ekstensi Feedio APIs</strong></li>
                     <li>Buka halaman Google Flow setelah ekstensi terpasang untuk mendapatkan token (Contoh: <code>ya.29xxxxddsg...</code>).</li>
                     <li>Salin token tersebut. Di aplikasi Feedio, klik logo <strong>Kunci (API Access)</strong>.</li>
                     <li>Tempel token di kolom API Key agar bot terhubung secara otomatis.</li>
