--- a/docs.html
+++ b/docs.html
@@ -823,7 +823,7 @@
                 <div class="warning-box">
                     <strong>PEMBERITAHUAN RESMI – STATUS LAYANAN TOPAZ</strong>
                     <p style="margin-top:0.5rem;">
-                        Per tanggal <strong>6 Juli</strong>, layanan <strong>Topaz AI</strong> telah 
+                        Per tanggal <strong>6 January 2026</strong>, layanan <strong>Topaz AI</strong> telah 
                         <strong>resmi menghentikan akses API dan layanan pihak ketiga</strong>.
                         Akibat kebijakan tersebut, seluruh metode <strong>Upscale Image & Video menggunakan model Topaz</strong> 
                         di aplikasi Feedio <strong>sudah tidak dapat digunakan</strong>.
