--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <a href="#image-tools" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:bg-gray-100">Image Tools</a>
         <a href="#guides" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:bg-gray-100">Guides</a>
         <a href="#releases" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:bg-gray-100">Releases</a>
-        <a href="https://feedio.pro/product/upgrade.html" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:bg-gray-100">Product</a>
+        <a href="https://feedio.pro/docs" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:bg-gray-100">Tutorial</a>
         <a href="https://feedio.pro/ChangeLicense.html" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:bg-gray-100">Change License</a>
         <a href="#download" class="block px-3 py-2 rounded-md text-base font-medium text-white gradient-bg">Download</a>
       </div>
