--- a/docs.html
+++ b/docs.html
@@ -1202,6 +1202,25 @@
                     </p>
                 </div>
                 
+                <div class="info-box">
+                    <strong>WAKTU PROSES REFUND</strong>
+                    <p style="margin-top:0.5rem;">
+                        Setelah permohonan refund disetujui, proses pengembalian dana akan diproses 
+                        dalam waktu <strong>7 hingga 14 Hari Kerja</strong>.
+                    </p>
+                    <p>
+                        Durasi tersebut mengikuti ketentuan dan mekanisme dari 
+                        <strong>penyedia layanan Payment Gateway</strong>, 
+                        termasuk proses verifikasi transaksi, administrasi sistem, 
+                        serta kebijakan bank atau metode pembayaran yang digunakan.
+                    </p>
+                    <p style="font-size:0.9rem; color:var(--text-secondary);">
+                        Feedio tidak memiliki kewenangan untuk mempercepat proses refund 
+                        di luar ketentuan resmi pihak penyedia pembayaran.
+                    </p>
+                </div>
+
+                
                 <div class="info-box" style="background-color: rgba(16, 185, 129, 0.1); border-left-color: var(--success-color);">
                     <strong>PERSETUJUAN PENGGUNA</strong>
                     <p style="margin-top:0.5rem;">
