--- a/docs.html
+++ b/docs.html
@@ -599,8 +599,15 @@
                     <li>Tempel token di kolom API Key agar bot terhubung secara otomatis.</li>
                 </ol>
 
-                <div class="placeholder-box">
-                    <span class="placeholder-text">[FOTO: Tampilan Pop-up API Access dengan kolom input token]</span>
+                <div class="video-full-wrapper">
+                    <div class="video-box">
+                        <iframe
+                            src="https://www.youtube.com/embed/lGxSObVimy4"
+                            title="Tutorial Google Image Labs"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen>
+                        </iframe>
+                    </div>
                 </div>
 
                 <h2>Konfigurasi & Pengaturan</h2>
@@ -762,6 +769,17 @@
                 <p>
                     Semua pemrosesan dilakukan secara <strong>cloud-based</strong> (online), sehingga tidak membebani kinerja perangkat keras (CPU/GPU) komputer Anda.
                 </p>
+                
+                <div class="video-full-wrapper">
+                    <div class="video-box">
+                        <iframe
+                            src="https://www.youtube.com/embed/CtWoxnMlSqA"
+                            title="Tutorial Remove Background & Upscale"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen>
+                        </iframe>
+                    </div>
+                </div>
 
                 <h2>Fitur Utama</h2>
                 <ul>
