--- a/docs.html
+++ b/docs.html
@@ -599,16 +599,12 @@
                     <li>Tempel token di kolom API Key agar bot terhubung secara otomatis.</li>
                 </ol>
 
-                <div class="video-full-wrapper">
-                    <div class="video-box">
-                        <iframe
-                            src="https://www.youtube.com/embed/lGxSObVimy4"
-                            title="Tutorial Google Image Labs"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen>
-                        </iframe>
-                    </div>
+                <div class="placeholder-box">
+                    <span class="placeholder-text">
+                        [FOTO: Tampilan Extention Feedio saat generate token di Flow Ultra]
+                    </span>
                 </div>
+                
 
                 <h2>Konfigurasi & Pengaturan</h2>
                 <h3>Mode Generasi (Input Panel)</h3>
@@ -686,9 +682,17 @@
                     <li><strong>Rasio Aspek:</strong> <code>1:1</code>, <code>3:4</code>, <code>4:3</code>, <code>16:9</code>, <code>9:16</code>.</li>
                 </ul>
 
-                <div class="placeholder-box">
-                    <span class="placeholder-text">[FOTO: Tampilan Setting Firefly]</span>
+                <div class="video-full-wrapper">
+                    <div class="video-box">
+                        <iframe
+                            src="https://www.youtube.com/embed/ZPnb4WYUzEE"
+                            title="Tutorial Firefly"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen>
+                        </iframe>
+                    </div>
                 </div>
+
 
                 <h2>Kode Kesalahan (Error Codes)</h2>
                 <div class="error-grid">
@@ -720,8 +724,15 @@
                     <li>Salin token tersebut dan tempelkan pada kolom API Key di aplikasi Feedio.</li>
                 </ol>
 
-                <div class="placeholder-box">
-                    <span class="placeholder-text">[FOTO: Tampilan Extention Feedio saat generate token di Whisk/ImageFX]</span>
+                <div class="video-full-wrapper">
+                    <div class="video-box">
+                        <iframe
+                            src="https://www.youtube.com/embed/lGxSObVimy4"
+                            title="Tutorial Google Image Labs"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen>
+                        </iframe>
+                    </div>
                 </div>
 
                 <h2>Konfigurasi & Pengaturan</h2>
