--- a/docs.html
+++ b/docs.html
@@ -712,9 +712,9 @@
                     <!-- LOGIN GATE -->
                     <div id="firefly-login-gate">
                         <div class="license-card">
-                            <h3 style="margin-top:0; text-align:center;">Unlock Tutorial Firefly Free Trial</h3>
+                            <h3 style="margin-top:0; text-align:center;">Free Access Adobe Firefly Free (Exclusive)</h3>
                             <p style="text-align:center; font-size:0.9rem; color:var(--text-secondary);">
-                                Masukkan <strong>ID Machine Feedio</strong> untuk membuka tutorial.
+                                Masukkan <strong>ID Machine Feedio</strong> untuk membuka tutorial claim Firefly Free.
                             </p>
                 
                             <div class="form-group">
