--- a/docs.html
+++ b/docs.html
@@ -707,12 +707,14 @@
 
                 
                 <div id="firefly-trial">
-                    <h1>Adobe Firefly Free Trial (Exclusive)</h1>
+                    <h1>Adobe Firefly Free For Member (Exclusive)</h1>
                 
                     <!-- LOGIN GATE -->
                     <div id="firefly-login-gate">
                         <div class="license-card">
-                            <h3 style="margin-top:0; text-align:center;">Free Access Adobe Firefly Free (Exclusive)</h3>
+                            <h3 style="margin:0 0 1rem 0; text-align:center; width:100%;">
+                                Free Access Adobe Firefly Free (Exclusive)
+                            </h3>
                             <p style="text-align:center; font-size:0.9rem; color:var(--text-secondary);">
                                 Masukkan <strong>ID Machine Feedio</strong> untuk membuka tutorial claim Firefly Free.
                             </p>
