--- a/docs.html
+++ b/docs.html
@@ -395,6 +395,7 @@
             padding: 2rem;
             margin-top: 2rem;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+            text-align: center;
         }
 
         .form-group {
