--- a/docs.html
+++ b/docs.html
@@ -399,9 +399,9 @@
         }
         
         .license-card .form-group {
-            text-align: left;
+            text-align: center;
         }
-        
+
         .form-group {
             margin-bottom: 1.5rem;
         }
