--- a/docs.html
+++ b/docs.html
@@ -311,6 +311,7 @@
         .btn {
             display: inline-flex;
             align-items: center;
+            justify-content: center; 
             padding: 0.6rem 1.2rem;
             border-radius: 6px;
             text-decoration: none;
@@ -730,7 +731,7 @@
                             <div id="fireflyLoading" class="loading-spinner"></div>
                             <div id="fireflyStatus" class="status-msg"></div>
                 
-                            <button onclick="unlockFireflyTrial()" class="btn btn-primary" style="width:100%;">
+                            <button onclick="unlockFireflyTrial()" class="btn btn-primary" style="width:100%; justify-content: center;">
                                 Unlock Tutorial
                             </button>
                         </div>
